# openair_materials_skills

./: readme.md
skills/auto-xrd/: SKILL.md
skills/auto-xrd/references/: xrd-formula-train-infer.md  xrd-target-negative-loop.md
skills/auto-xrd/resources/: .env.example  install.py  requirements.txt
skills/material-pipeline/: SKILL.md
skills/material-pipeline/evals/: evals.json
skills/preparation_recommendation/: SKILL.md
skills/preparation_recommendation/references/: add-constraint-sop.md  meta-rule.md
skills/preparation_recommendation/resources/: .env.example  README.md  install.py  pyproject.toml  requirements.txt  run.sh
skills/preparation_recommendation/resources/data/knowledge_base/: knowledge_base_processed.jsonl
skills/preparation_recommendation/resources/data/recommand_recipe/: input_real.jsonl
skills/preparation_recommendation/resources/data/recommand_window/: input_template.jsonl
skills/preparation_recommendation/resources/data/similar_mates/: how_to_parse_intuition.jsonl  intuition_template.jsonl
skills/preparation_recommendation/resources/runner/: api_server.py  run_pipeline.py
skills/preparation_recommendation/resources/src/: prepare_flux_database.py  recommend_recipe.py  reference_api.py  similar_retrieval.py  statistic_window.py
skills/preparation_recommendation/resources/utils/: draw_temperature.py  extract2knowledge.py  knowledge_post_process.py  matai_api.py  matai_llm.py  parse_intuition.py  response2json.py
skills/search_material/: SKILL.md  requirements.txt
skills/search_material/evals/: evals.json
(+5 files in other folders)
