[project]
name = "preparation-recommendation"
version = "1.0.0"
description = "Materials preparation parameter recommendation system"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
